flex wrap issue fixed

--- a/transaviaproject/css/styles.css
+++ b/transaviaproject/css/styles.css
@@ -651,7 +651,6 @@ position: absolute;
 	filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
 	flex-direction:column;
 	flex-flow:column;
-	flex-wrap:wrap;
 	margin:1em .4em .0em;
 	padding:1em 1em 3em;
 	width:100%;
